manual-hazards alignment fix when inside table

--- a/style.css
+++ b/style.css
@@ -1771,6 +1771,7 @@ table.hazardTable, .manual-hazards ul {
 
 .manual-hazards {
     display: table;
+    border-collapse: collapse;
 }
 .manual-hazards.top-spacing {
     clear: both;
